# comp64501_groupwork

./: .gitignore  README.md
models/: SingleSlot.py  bo_utils.py  double_slot_bo.py  main.ipynb  main.py
simulation/: DoubleSlot.py  QuantumChannelAnalyzer.ipynb  ShallowPocketModel.py  Shallow_Pocket_model.ipynb  SingleSlot.py  double_main.ipynb  double_main.py  main.ipynb  main.py  pyproject.toml  single_main.ipynb  single_main.py
